refactor: replace types in get-methods