@@ -7,7 +7,6 @@ import ru.java.java_kanban.manager.history.HistoryManager;
 import ru.java.java_kanban.manager.history.InMemoryHistoryManager;
 import ru.java.java_kanban.model.Task;
 import ru.java.java_kanban.model.TaskStatus;
-import ru.java.java_kanban.model.TaskType;
 
 import java.util.List;
 
@@ -16,9 +15,9 @@ public class InMemoryHistoryManagerTest {
     @Test
     public void add_moveTaskToEnd_ifAlreadyInHistory() {
         HistoryManager historyManager = new InMemoryHistoryManager();
-        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW);
         task1.setId(1);
-        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW);
         task2.setId(2);
 
         historyManager.add(task1);
@@ -34,9 +33,9 @@ public class InMemoryHistoryManagerTest {
     @Test
     public void remove_deleteTaskFromHistory_ifExists() {
         HistoryManager historyManager = new InMemoryHistoryManager();
-        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW);
         task1.setId(1);
-        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW);
         task2.setId(2);
 
         historyManager.add(task1);
@@ -45,7 +44,7 @@ public class InMemoryHistoryManagerTest {
 
         List<Task> history = historyManager.getHistory();
         assertEquals(1, history.size());
-        assertEquals(task2, history.get(0));
+        assertEquals(task2, history.getFirst());
     }
 
     @Test
@@ -64,22 +63,22 @@ public class InMemoryHistoryManagerTest {
     @Test
     public void add_setHeadAndTail_ifHistoryEmpty() {
         HistoryManager historyManager = new InMemoryHistoryManager();
-        Task task = new Task("Task 1", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task = new Task("Task 1", "Desc", TaskStatus.NEW);
         task.setId(1);
 
         historyManager.add(task);
 
         List<Task> history = historyManager.getHistory();
         assertEquals(1, history.size());
-        assertEquals(task, history.get(0));
+        assertEquals(task, history.getFirst());
     }
 
     @Test
     public void remove_updateHead_ifFirstTaskRemoved() {
         HistoryManager historyManager = new InMemoryHistoryManager();
-        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW);
         task1.setId(1);
-        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW);
         task2.setId(2);
 
         historyManager.add(task1);
@@ -88,15 +87,15 @@ public class InMemoryHistoryManagerTest {
 
         List<Task> history = historyManager.getHistory();
         assertEquals(1, history.size());
-        assertEquals(task2, history.get(0));
+        assertEquals(task2, history.getFirst());
     }
 
     @Test
     public void remove_updateTail_ifLastTaskRemoved() {
         HistoryManager historyManager = new InMemoryHistoryManager();
-        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task1 = new Task("Task 1", "Desc", TaskStatus.NEW);
         task1.setId(1);
-        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task2 = new Task("Task 2", "Desc", TaskStatus.NEW);
         task2.setId(2);
 
         historyManager.add(task1);
@@ -105,26 +104,26 @@ public class InMemoryHistoryManagerTest {
 
         List<Task> history = historyManager.getHistory();
         assertEquals(1, history.size());
-        assertEquals(task1, history.get(0));
+        assertEquals(task1, history.getFirst());
     }
 
     @Test
     public void add_appearInHistory_ifNotNull() {
         HistoryManager historyManager = new InMemoryHistoryManager();
-        Task task = new Task("Test Task", "Test Description", TaskStatus.NEW, TaskType.TASK);
+        Task task = new Task("Test Task", "Test Description", TaskStatus.NEW);
         task.setId(1);
 
         historyManager.add(task);
 
         List<Task> history = historyManager.getHistory();
         assertEquals(1, history.size());
-        assertEquals(task, history.get(0));
+        assertEquals(task, history.getFirst());
     }
 
     @Test
     public void remove_clearHistory_ifLastTaskRemoved() {
         HistoryManager historyManager = new InMemoryHistoryManager();
-        Task task = new Task("Task 1", "Desc", TaskStatus.NEW, TaskType.TASK);
+        Task task = new Task("Task 1", "Desc", TaskStatus.NEW);
         task.setId(1);
 
         historyManager.add(task);
